[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Immortal_Star.png" type="Texture" id=4]
[ext_resource path="res://Sprites/icon_press.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BackButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/GameScore.tres" type="DynamicFont" id=7]
[ext_resource path="res://Images/lifebar_bg.png" type="Texture" id=8]
[ext_resource path="res://Images/lifebar_fill.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Background_Scene.png" type="Texture" id=10]
[ext_resource path="res://Sprites/smily.png" type="Texture" id=11]
[ext_resource path="res://Sprites/icon_Hp.png" type="Texture" id=12]
[ext_resource path="res://Sprites/icon_energy.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 100 )

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GameElements/EnemyBody/Enemy:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GameElements" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="GameElements"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GameElements"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.219608, 0.698039, 0.74902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GameElements"]
visible = false
margin_right = 140.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 192, 150 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="GameElements"]
visible = false
margin_left = 4.48975
margin_top = 112.246
margin_right = 144.49
margin_bottom = 262.246
rect_pivot_offset = Vector2( 192, 150 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score3" type="Label" parent="GameElements"]
visible = false
margin_left = 4.48987
margin_top = 228.982
margin_right = 144.49
margin_bottom = 378.982
rect_pivot_offset = Vector2( 192, 150 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBody" type="KinematicBody2D" parent="GameElements"]
visible = false
position = Vector2( 288, 450 )

[node name="Enemy" type="Sprite" parent="GameElements/EnemyBody"]
texture = ExtResource( 5 )

[node name="EnemyCol" type="CollisionShape2D" parent="GameElements/EnemyBody"]
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="GameElements"]
position = Vector2( 288, 850 )
script = ExtResource( 2 )

[node name="Player" type="Sprite" parent="GameElements/KinematicBody2D"]
texture = ExtResource( 5 )

[node name="PlayerCol" type="CollisionShape2D" parent="GameElements/KinematicBody2D"]
shape = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="GameElements/KinematicBody2D"]
position = Vector2( 2.1189, -72.119 )
emitting = false
amount = 10
preprocess = 22.7
speed_scale = 8.77
explosiveness = 0.35
randomness = 0.01
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 44.92
spread = 63.95
gravity = Vector2( 0, 1 )
initial_velocity = 7.52
initial_velocity_random = 0.04
angular_velocity = 10.83
angular_velocity_random = 0.06
orbit_velocity = 0.1
orbit_velocity_random = 0.02
linear_accel = 0.4
linear_accel_random = 0.07
radial_accel = 16.54
radial_accel_random = 0.1
damping_random = 0.29
angle = 75.8
angle_random = 0.19
scale_amount = 0.2

[node name="BackButton" parent="GameElements" instance=ExtResource( 6 )]
margin_left = 26.8252
margin_top = 937.993
margin_right = 156.825
margin_bottom = 1025.99

[node name="Bars" type="Node" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="Bars"]
margin_left = 54.5619
margin_top = 46.4475
margin_right = 450.562
margin_bottom = 99.4475
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_icon" type="TextureRect" parent="Bars/TextureProgress"]
margin_left = -28.6186
margin_top = -1.32499
margin_right = 31.3814
margin_bottom = 56.675
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress2" type="TextureProgress" parent="Bars"]
margin_left = 54.4547
margin_top = 112.694
margin_right = 450.455
margin_bottom = 165.694
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Bars/TextureProgress2"]
margin_left = -33.551
margin_top = -5.33675
margin_right = 43.449
margin_bottom = 63.6633
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress3" type="TextureProgress" parent="Bars"]
margin_left = 54.8046
margin_top = 182.212
margin_right = 450.805
margin_bottom = 235.212
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Bars/TextureProgress3"]
margin_left = -33.551
margin_top = -5.33675
margin_right = 43.449
margin_bottom = 63.6633
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 191.783, 752.15 )
shape = SubResource( 3 )
action = "touched"

[node name="SceneTransition" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 576.0
margin_bottom = 1024.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotate"
anims/rotate = SubResource( 4 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
